Fixed some variables not in container for license replacement

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,8 @@ services:
     volumes:
       - world-logs:/atavism_server/logs
     environment:
+      - ATAVISM_EMAIL=${ATAVISM_EMAIL}
+      - ATAVISM_LICENCE_KEY=${ATAVISM_LICENCE_KEY}
       - ADMIN_DATABASE_USER=${ADMIN_DATABASE_USER}
       - ADMIN_DATABASE_PASSWORD=${ADMIN_DATABASE_PASSWORD}
       - MASTER_DATABASE_USER=${ADMIN_DATABASE_USER}
