--- a/docker/images/all-in-one/Dockerfile
+++ b/docker/images/all-in-one/Dockerfile
@@ -1,6 +1,47 @@
-## Create a Atavism Server image
-FROM openjdk:23-slim-bullseye
+#      _   _              _                 ____                           
+#     / \ | |_ __ ___   _(_)___ _ __ ___   / ___|  ___ _ ____   _____ _ __ 
+#    / _ \| __/ _` \ \ / / / __| '_ ` _ \  \___ \ / _ \ '__\ \ / / _ \ '__|
+#   / ___ \ || (_| |\ V /| \__ \ | | | | |  ___) |  __/ |   \ V /  __/ |   
+#  /_/_  \_\__\__,_| \_/ |_|___/_| |_| |_| |____/ \___|_|    \_/ \___|_|   
+#  |_ _|_ __ ___   __ _  __ _  ___                                         
+#   | || '_ ` _ \ / _` |/ _` |/ _ \                                        
+#   | || | | | | | (_| | (_| |  __/                                        
+#  |___|_| |_| |_|\__,_|\__, |\___|                                        
+#                       |___/                                              
+
+#   ____                            _                 _           
+#  |  _ \  ___ _ __   ___ _ __   __| | ___ _ __   ___(_) ___  ___ 
+#  | | | |/ _ \ '_ \ / _ \ '_ \ / _` |/ _ \ '_ \ / __| |/ _ \/ __|
+#  | |_| |  __/ |_) |  __/ | | | (_| |  __/ | | | (__| |  __/\__ \
+#  |____/ \___| .__/ \___|_| |_|\__,_|\___|_| |_|\___|_|\___||___/
+#             |_|                                                 
+FROM openjdk:23-slim-bullseye as dependencies
+
 RUN apt-get update -y
 RUN apt-get install -y procps
 
+#   ____                 _                                  _   
+#  |  _ \  _____   _____| | ___  _ __  _ __ ___   ___ _ __ | |_ 
+#  | | | |/ _ \ \ / / _ \ |/ _ \| '_ \| '_ ` _ \ / _ \ '_ \| __|
+#  | |_| |  __/\ V /  __/ | (_) | |_) | | | | | |  __/ | | | |_ 
+#  |____/ \___| \_/ \___|_|\___/| .__/|_| |_| |_|\___|_| |_|\__|
+#                               |_|                             
+FROM dependencies as development
+
 CMD [ "sh", "start.sh" ]
+
+#   ____                _            _   _             
+#  |  _ \ _ __ ___   __| |_   _  ___| |_(_) ___  _ __  
+#  | |_) | '__/ _ \ / _` | | | |/ __| __| |/ _ \| '_ \ 
+#  |  __/| | | (_) | (_| | |_| | (__| |_| | (_) | | | |
+#  |_|   |_|  \___/ \__,_|\__,_|\___|\__|_|\___/|_| |_|
+FROM dependencies as production
+
+RUN mkdir -p /atavism_server/bin
+COPY atavism_server /atavism_server
+COPY ssl/private.key /atavism_server/bin/private.key
+COPY ./docker/images/all-in-one/start.sh start.sh
+RUN chmod +x start.sh
+
+CMD [ "sh", "start.sh" ]
+                                                     
