--- a/docker/compose/docker-compose.yml
+++ b/docker/compose/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   mysql-master:
     environment:
@@ -13,6 +13,7 @@ services:
         - SQL_FILE=master.sql
     volumes:
       - master-data:/var/lib/mysql
+
   mysql-admin:
     environment:
       - MYSQL_ROOT_PASSWORD=${ADMIN_MYSQL_ROOT_PASSWORD}
@@ -76,12 +77,12 @@ services:
       - 9005:9005/tcp
       - 9010:9010/udp
     depends_on:
-     - mysql-master
+      - mysql-master
     links:
-     - mysql-master
-     - mysql-admin
-     - mysql-atavism
-     - mysql-world
+      - mysql-master
+      - mysql-admin
+      - mysql-atavism
+      - mysql-world
 volumes:
   admin-data:
     driver: local
