--- a/docker/compose/production.yml
+++ b/docker/compose/production.yml
@@ -7,12 +7,7 @@ services:
     build:
       context: ./../..
       dockerfile: docker/images/all-in-one/Dockerfile
-      target: development
-    # Map host files to the container for ease of development
-    volumes:
-      - ../../atavism_server:/atavism_server
-      - ../../ssl/private.key:/atavism_server/bin/private.key
-      - ../images/all-in-one/start.sh:/start.sh
+      target: production
     environment:
       - ATAVISM_EMAIL=${ATAVISM_EMAIL}
       - ATAVISM_LICENCE_KEY=${ATAVISM_LICENCE_KEY}
