--- a/docker/compose/.env.example
+++ b/docker/compose/.env.example
@@ -12,3 +12,7 @@ ATAVISM_DATABASE_PASSWORD:A7AV15M
 WORLD_MYSQL_ROOT_PASSWORD:r007p455w0rd
 WORLD_DATABASE_USER:atavism
 WORLD_DATABASE_PASSWORD:A7AV15M
+
+# Should the server run as one process logging to a single file or
+# should it run each agent separetely with separate logging
+ATAVISM_ALL_IN_ONE_ENABLED:false
