--- a/docker/images/base/Dockerfile
+++ b/docker/images/base/Dockerfile
@@ -28,10 +28,10 @@ RUN apt-get install -y procps figlet
 #                               |_|                             
 FROM dependencies as development
 
-ARG SERVICE_NAME
-ENV SERVICE_NAME=${SERVICE_NAME}
+ARG ATAVISM_MODULE_NAME
+ENV ATAVISM_MODULE_NAME=${ATAVISM_MODULE_NAME}
 
-CMD [ "sh", "start.sh", "${SERVICE_NAME:-server}" ]
+CMD sh start.sh ${ATAVISM_MODULE_NAME:-server}
 
 #   ____                _            _   _             
 #  |  _ \ _ __ ___   __| |_   _  ___| |_(_) ___  _ __  
@@ -40,8 +40,8 @@ CMD [ "sh", "start.sh", "${SERVICE_NAME:-server}" ]
 #  |_|   |_|  \___/ \__,_|\__,_|\___|\__|_|\___/|_| |_|
 FROM dependencies as production
 
-ARG SERVICE_NAME
-ENV SERVICE_NAME=${SERVICE_NAME}
+ARG ATAVISM_MODULE_NAME
+ENV ATAVISM_MODULE_NAME=${ATAVISM_MODULE_NAME}
 ARG IMAGE_NAME
 ENV IMAGE_NAME=${IMAGE_NAME}
 
@@ -58,8 +58,8 @@ COPY ./docker/images/env.sh /env.sh
 RUN chmod +x env.sh
 
 # Copy start script
-COPY ./docker/images/${IMAGE_NAME}/start.sh ${SERVICE_NAME}
+COPY ./docker/images/${IMAGE_NAME:-world}/start.sh ${ATAVISM_MODULE_NAME:-server}
 RUN chmod +x start.sh
 
-CMD [ "sh", "start.sh", "${SERVICE_NAME:-start}" ]
+CMD sh start.sh ${ATAVISM_MODULE_NAME}
                                                      
