--- a/docker/compose/production/single.yml
+++ b/docker/compose/production/single.yml
@@ -1,15 +1,14 @@
 version: "3"
-name: atavism-server
+name: atavism-server-production
 include:
   - ../common/resources.yml
   - master.yml
 services:
   world:
     extends:
-      file: ../common/base.yml
-      service: atavism-module
-    build:
-      target: production
-      args:
-        - IMAGE_NAME=world
-    env_file: .env
+      file: module.yml
+      service: atavism-module-production
+    ports:
+      - 5042:5042/tcp
+      - 5052:5052/udp
+      - 5566:5566/tcp
