--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,14 @@
 atavismkey.txt
 atavism_server
 ssl/*
+
+**/.gradle
+
+# Source
+src/*
+!src/plugins
+src/plugins/*
+
+# Source dependencies
+!src/lib
+src/lib/*
