--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "java.configuration.updateBuildConfiguration": "automatic",
   "triggerTaskOnSave.tasks": {
-    "build": [
+    "reload": [
       "src/**/*.java", // <-- Glob pattern to specify which files should trigger the task
       "settings.gradle",
       "build.gradle"
