--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
   "java.configuration.updateBuildConfiguration": "automatic",
   "triggerTaskOnSave.tasks": {
-    "reload": [
-      "src/**/*.java", // <-- Glob pattern to specify which files should trigger the task
-      "settings.gradle",
-      "build.gradle"
+    "dev.reload": [
+      "src/**/*.java" // <-- Glob pattern to specify which files should trigger the task
+      // "settings.gradle",
+      // "build.gradle"
     ]
   }
 }
